Few fixes to resolve issues with Firefox line flicker. insertAfter/insertBefore classes are now added to the line when its shown.

--- a/Plugins/ViperCursorAssistPlugin/ViperCursorAssistPlugin.css
+++ b/Plugins/ViperCursorAssistPlugin/ViperCursorAssistPlugin.css
@@ -123,3 +123,7 @@
 .ViperCursorAssistPlugin:hover .ViperCursorAssistPlugin-cursorLine {
     background-image: none;
 }
+
+.ViperCursorAssistPlugin.insertBefore {
+    margin-top: -16px;
+}
